--- a/index.html
+++ b/index.html
@@ -70,7 +70,36 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- EmailJS Script -->
+    <script type="text/javascript">
+        (function () {
+            emailjs.init('YOUR_USER_ID');  // Replace with your EmailJS User ID
+        })();
+
+        document.getElementById('contact-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+
+            if (name && email && message) {
+                // Send the form data via EmailJS
+                emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+                    .then(function (response) {
+                        alert('Thank you for your message, ' + name + '! I will get back to you soon.');
+                        document.getElementById('contact-form').reset();
+                    }, function (error) {
+                        alert('Something went wrong. Please try again later.');
+                    });
+            } else {
+                alert('Please fill in all fields before submitting.');
+            }
+        });
+    </script>
+    
+    <!-- Add EmailJS CDN -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </body>
 
 </html>
